trunk/Archive2/e2/9de5a6cd9bd21e/output
clang++ c++14
main.cpp:15:25: warning: comparison of integers of different signs: 'int' and 'unsigned long' [-Wsign-compare]
    for ( int i = 0 ; i < pieces.size() - 2 ; i++ )
                      ~ ^ ~~~~~~~~~~~~~~~~~
main.cpp:17:32: warning: comparison of integers of different signs: 'int' and 'unsigned long' [-Wsign-compare]
        for ( int j = i + 1; j < (pieces.size() - 1) ; j++ )
                             ~ ^  ~~~~~~~~~~~~~~~~~
main.cpp:19:36: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
            for ( int k = j + 1; k < (pieces.size()); k++ )
                                 ~ ^  ~~~~~~~~~~~~~
main.cpp:32:1: error: 'main' must return 'int'
void main()
^~~~
int
3 warnings and 1 error generated.

